<resources>
    <string name="app_name">To-Do list</string>
    <string name="add">Add new Task</string>
    <string name="editText">Add a new item..</string>
    <string name="hintAdd">Add a new task..</string>
    <string name="save">Save</string>
    <string name="etEditText">etEditText</string>
    <string name="etText">Add a multiline comment here..</string>
    <string name="editTextName">Add task name..</string>
    <string name="tvName">Task Name</string>
    <string name="tvDate">Task Date</string>
    <string name="tvStatus">Task Status</string>
    <string name="btnSave">Save</string>

    <string name="action_status">Status</string>
    <string name="tvDueDate">Show task due-date</string>
    <string name="tvEachName">Enter task name</string>
    <string-array name="status">
        <item>In progress</item>
        <item>Done</item>
    </string-array>
</resources>
