<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:text="@string/tvName"
        android:id="@+id/textViewName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/editTextName" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:text="@string/tvDate"
        android:id="@+id/textViewDate" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:text="@string/tvStatus"
        android:id="@+id/textViewStatus" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerID"
        android:entries="@array/status"
        android:spinnerMode="dropdown"
        android:layout_weight="0.04" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/buttonSave"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/mybuttons"
        android:textAppearance="@style/CustomTextAppearance"
        style="@style/CustomButtonStyle"/>

</LinearLayout>